build/usd-sys/usd-c/include.in/pxr/usd/pcp/pcp_errors.h

typedef struct std__string_t_s std__string_t;
typedef std__string_t std_string_t;
/** \class PcpErrorPropertyPermissionDenied

Layers with illegal opinions about private properties. */
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_t pxr_PcpErrorPropertyPermissionDenied_t;
/** \class PcpErrorSublayerCycle

Layers that recursively sublayer themselves. */
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_t pxr_PcpErrorSublayerCycle_t;
/** \class PcpErrorTargetPermissionDenied

Paths with illegal opinions about private targets. */
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_t pxr_PcpErrorTargetPermissionDenied_t;
/** \class PcpErrorUnresolvedPrimPath

Asset paths that could not be both resolved and loaded. */
typedef struct pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_t;
typedef pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_t pxr_PcpErrorUnresolvedPrimPath_t;
/** Destructor. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_dtor(
    pxr_PcpErrorPropertyPermissionDenied_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_copy(
    pxr_PcpErrorPropertyPermissionDenied_t * * this_
    , pxr_PcpErrorPropertyPermissionDenied_t const * rhs);
/** Converts error to string message. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_ToString(
    pxr_PcpErrorSublayerCycle_t const * this_
    , std_string_t * * return_);
/** Return true if this type of error should be reported at most
once for a given prim. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_ShouldReportAtMostOnce(
    pxr_PcpErrorSublayerCycle_t const * this_
    , _Bool * return_);
/** Destructor. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_dtor(
    pxr_PcpErrorSublayerCycle_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_copy(
    pxr_PcpErrorSublayerCycle_t * * this_
    , pxr_PcpErrorSublayerCycle_t const * rhs);
/** Converts error to string message. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_ToString(
    pxr_PcpErrorTargetPermissionDenied_t const * this_
    , std_string_t * * return_);
/** Return true if this type of error should be reported at most
once for a given prim. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_ShouldReportAtMostOnce(
    pxr_PcpErrorTargetPermissionDenied_t const * this_
    , _Bool * return_);
/** Destructor. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_dtor(
    pxr_PcpErrorTargetPermissionDenied_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_copy(
    pxr_PcpErrorTargetPermissionDenied_t * * this_
    , pxr_PcpErrorTargetPermissionDenied_t const * rhs);
/** Converts error to string message. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_ToString(
    pxr_PcpErrorUnresolvedPrimPath_t const * this_
    , std_string_t * * return_);
/** Return true if this type of error should be reported at most
once for a given prim. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_ShouldReportAtMostOnce(
    pxr_PcpErrorUnresolvedPrimPath_t const * this_
    , _Bool * return_);
/** Destructor. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_dtor(
    pxr_PcpErrorUnresolvedPrimPath_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_copy(
    pxr_PcpErrorUnresolvedPrimPath_t * * this_
    , pxr_PcpErrorUnresolvedPrimPath_t const * rhs);