build/usd-sys/src/pxr/usd/pcp/pcp_errors.rs


pub fn pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_dtor(this_: *mut pxr_PcpErrorPropertyPermissionDenied_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorPropertyPermissionDenied_copy(this_: *mut *mut pxr_PcpErrorPropertyPermissionDenied_t, rhs: *const pxr_PcpErrorPropertyPermissionDenied_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_ToString(this_: *const pxr_PcpErrorSublayerCycle_t, return_: *mut *mut std_string_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_ShouldReportAtMostOnce(this_: *const pxr_PcpErrorSublayerCycle_t, return_: *mut bool) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_dtor(this_: *mut pxr_PcpErrorSublayerCycle_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorSublayerCycle_copy(this_: *mut *mut pxr_PcpErrorSublayerCycle_t, rhs: *const pxr_PcpErrorSublayerCycle_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_ToString(this_: *const pxr_PcpErrorTargetPermissionDenied_t, return_: *mut *mut std_string_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_ShouldReportAtMostOnce(this_: *const pxr_PcpErrorTargetPermissionDenied_t, return_: *mut bool) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_dtor(this_: *mut pxr_PcpErrorTargetPermissionDenied_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorTargetPermissionDenied_copy(this_: *mut *mut pxr_PcpErrorTargetPermissionDenied_t, rhs: *const pxr_PcpErrorTargetPermissionDenied_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_ToString(this_: *const pxr_PcpErrorUnresolvedPrimPath_t, return_: *mut *mut std_string_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_ShouldReportAtMostOnce(this_: *const pxr_PcpErrorUnresolvedPrimPath_t, return_: *mut bool) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_dtor(this_: *mut pxr_PcpErrorUnresolvedPrimPath_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____PcpErrorUnresolvedPrimPath_copy(this_: *mut *mut pxr_PcpErrorUnresolvedPrimPath_t, rhs: *const pxr_PcpErrorUnresolvedPrimPath_t) -> Exception;


} // extern "C"
